# Tempest

./: .gitignore  CMakeLists.txt  README.md  build.bat  camera.c  camera.h  game.c  game.h  glad.c  image.c  image.h  main.c  renderer.c  renderer.h  run.bat  scene.c  scene.h  shader.c  shader.h
assets/models/: icosphere.glb  icosphere.gltf
